# IrrlichtCMake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: ExampleBuild.cmake  IrrlichtSource.cmake  IrrlichtVersion.cmake  PrintSettings.cmake  WriteSettings.cmake
CMake/Compiler/: CompilerGccLikeSettings.cmake  CompilerMSVCLikeSettings.cmake
CMake/Dependencies/: DependencyDirectX9.cmake  DependencyFontConfig.cmake  DependencyFreeType.cmake  DependencyOpenGL.cmake  DependencyX11.cmake
CMake/OperatingSystems/: MacOSXSettings.cmake  UnixLikeSettings.cmake  WindowsSettings.cmake
CMake/Options/: OptionBuildExamples.cmake  OptionBuildTools.cmake  OptionDirectX9.cmake  OptionInstallMediaFiles.cmake  OptionProfiling.cmake  OptionStaticLib.cmake  OptionX11Support.cmake
examples/: CMakeLists.txt
examples/01.HelloWorld/: CMakeLists.txt
examples/02.Quake3Map/: CMakeLists.txt
examples/03.CustomSceneNode/: CMakeLists.txt
examples/04.Movement/: CMakeLists.txt
examples/05.UserInterface/: CMakeLists.txt
examples/06.2DGraphics/: CMakeLists.txt
examples/07.Collision/: CMakeLists.txt
examples/08.SpecialFX/: CMakeLists.txt
examples/09.Meshviewer/: CMakeLists.txt
examples/10.Shaders/: CMakeLists.txt
examples/11.PerPixelLighting/: CMakeLists.txt
examples/12.TerrainRendering/: CMakeLists.txt
examples/13.RenderToTexture/: CMakeLists.txt
examples/14.Win32Window/: CMakeLists.txt
examples/15.LoadIrrFile/: CMakeLists.txt
examples/16.Quake3MapShader/: CMakeLists.txt
examples/17.HelloWorld_Mobile/: CMakeLists.txt
examples/18.SplitScreen/: CMakeLists.txt
examples/19.MouseAndJoystick/: CMakeLists.txt
examples/20.ManagedLights/: CMakeLists.txt
examples/21.Quake3Explorer/: CMakeLists.txt
examples/22.MaterialViewer/: CMakeLists.txt
examples/23.SMeshHandling/: CMakeLists.txt
examples/24.CursorControl/: CMakeLists.txt
examples/25.XmlHandling/: CMakeLists.txt
examples/26.OcclusionQuery/: CMakeLists.txt
examples/Demo/: CMakeLists.txt
tools/: CMakeLists.txt
tools/FileToHeader/: CMakeLists.txt
tools/GUIEditor/: CMakeLists.txt
tools/IrrFontTool/: CMakeLists.txt
tools/MeshConverter/: CMakeLists.txt
